Made some fields private; fixed javadoc tags
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323606 13f79535-47bb-0310-9956-ffa450edef68